[gd_scene load_steps=5 format=3 uid="uid://bjgjlcayp00ht"]

[ext_resource type="Script" path="res://coin.gd" id="1_8hhe7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ryl4l"]
height = 0.15
radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hbo4h"]
albedo_color = Color(1, 0.815686, 0, 1)
metallic = 1.0
roughness = 0.5

[sub_resource type="CylinderMesh" id="CylinderMesh_t2tvv"]
material = SubResource("StandardMaterial3D_hbo4h")
top_radius = 0.3
bottom_radius = 0.3
height = 0.15

[node name="Coin" type="Area3D"]
script = ExtResource("1_8hhe7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CylinderShape3D_ryl4l")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_t2tvv")

[node name="Label3D_coinvalue" type="Label3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0762471, 0, 0)
modulate = Color(1, 0.756863, 0, 1)
text = "1"
font_size = 60

[node name="Label3D_coinvalue2" type="Label3D" parent="."]
transform = Transform3D(1.19209e-07, 0, -1, 0, 1, 0, 1, 0, 1.19209e-07, -0.0826992, 0, 0)
modulate = Color(1, 0.756863, 0, 1)
text = "1"
font_size = 60

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
